--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd client && yarn && yarn build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,10 @@
   "bugs": {
     "url": "https://github.com/the-mocode/GrowHow/issues"
   },
-  "homepage": "https://github.com/the-mocode/GrowHow#readme"
+  "homepage": "https://github.com/the-mocode/GrowHow#readme",
+  "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2"
+  }
 }
-
